# ru-mobile-outage-correlator

./: .gitignore  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: ai_integration.md  examples_ru.md
examples/demo_mobile_app/: external_signals.json  internal_incidents.json
examples/demo_small_saas/: external_signals.json  internal_incidents.json
src/ru_mobile_outage_correlator/: __init__.py  cli.py
src/ru_mobile_outage_correlator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ru_mobile_outage_correlator/ai/: summaries.py
src/ru_mobile_outage_correlator/config/: model.py
src/ru_mobile_outage_correlator/correlator/: engine.py  geo_operator_mapper.py  timeline_builder.py
src/ru_mobile_outage_correlator/sources_external/: active_probes.py  news_feed_parser.py  status_pages.py
src/ru_mobile_outage_correlator/sources_internal/: logs_parser.py  metrics_ingest.py
tests/: conftest.py  test_ai_summaries.py  test_config_validation.py  test_correlation_engine.py  test_timeline_builder.py
